<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/statisticsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D1321"
    tools:context=".StatisticsFragment">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/statistics"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-medium" />

        <ImageView
            android:id="@+id/btnNotification"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/notifications_circle_outline_svgrepo_com"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentBalance"
        android:textSize="14sp"
        android:textColor="#C0C0C0"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvBalanceAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentBalance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/graphContainer"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvBalanceAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/graphImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/graph"
            android:scaleType="fitXY"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/monthContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/graphContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView style="@style/MonthTextStyle" android:text="@string/oct" />
        <TextView style="@style/MonthTextStyle" android:text="@string/nov" />
        <TextView style="@style/MonthTextStyle" android:text="@string/dec" />
        <TextView style="@style/MonthTextStyle" android:text="@string/jan" android:textStyle="bold" android:textColor="@color/white" android:background="@drawable/selected_month_bg" />
        <TextView style="@style/MonthTextStyle" android:text="@string/feb" />
        <TextView style="@style/MonthTextStyle" android:text="@string/mar" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/monthContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tvSellAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sellAll"
        android:textSize="14sp"
        android:textColor="#3F51B5"
        app:layout_constraintTop_toTopOf="@id/tvTransaction"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransactions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTransaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>