<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.Onboarding2Activity"
    android:background="@color/backcolor"
    >

    <ImageView
        android:id="@+id/mainPic"
        android:layout_width="335dp"
        android:layout_height="311dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/group3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/slider3"
        android:layout_width="45dp"
        android:layout_height="6dp"
        android:background="@drawable/slider3"
        app:layout_constraintEnd_toEndOf="@+id/mainPic"
        app:layout_constraintStart_toStartOf="@+id/mainPic"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="430dp" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/completelySafeTitle"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/slider3"
        app:layout_constraintStart_toStartOf="@id/mainPic"
        app:layout_constraintEnd_toEndOf="@id/mainPic"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/subText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/completelySafe"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="@id/mainPic"
        app:layout_constraintEnd_toEndOf="@id/mainPic"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/nextButton3"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/subText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="85dp"/>










</androidx.constraintlayout.widget.ConstraintLayout>