<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.Onboarding1Activity"
    android:background="@color/backcolor"
    >

    <ImageView
        android:id="@+id/mainPic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="335dp"
        android:layout_height="249dp"
        android:background="@drawable/group1"
        android:foregroundGravity="center"
        android:layout_marginTop="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <ImageView
        android:id="@+id/slider"
        android:layout_width="45dp"
        android:layout_height="6dp"
        android:background="@drawable/slide"
        app:layout_constraintEnd_toEndOf="@+id/mainPic"
        app:layout_constraintStart_toStartOf="@+id/mainPic"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="430dp" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboardingTitle"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/slider"
        app:layout_constraintStart_toStartOf="@id/mainPic"
        app:layout_constraintEnd_toEndOf="@id/mainPic"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/subText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="@id/mainPic"
        app:layout_constraintEnd_toEndOf="@id/mainPic"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/nextButton1"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/subText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="85dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>